--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <title>CliniClass</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" style="height: 9vh;">
+    <nav class="navbar navbar-dark bg-dark fixed-top" style="height: 9vh;">
         <div class="container-fluid">
             <div class="d-flex">
                 <a class="navbar-brand ps-3 pe-5 me-5" href="#">Bootstrap</a>
@@ -17,10 +18,27 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
             </div>
-          
+            <div class="d-flex">
+                <div class="input-group me-4">
+                    <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="button-addon2">
+                    <button class="btn btn-primary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
+                </div>
+                <div class="dropdown d-flex justify-content-center align-items-center me-3">
+                    <a class="dropdown-toggle text-decoration-none text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16" style="margin-right: -7px;">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                        </svg>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
       </nav>
-    <div class="container-fluid m-0 p-0 d-flex" style="height: 91vh;">
+    <div class="container-fluid p-0 d-flex" style="height: 91vh; margin-top: 9vh;">
         <div class="bg-dark text-light h-100 py-2">
             <div class="collapse collapse-horizontal" id="collapseWidthExample">
                 <div class="card card-body mx-3 bg-dark border-0" style="width: 200px;">
@@ -40,15 +58,17 @@
         <div class="container-fluid h-100">
             <div class="d-flex align-items-start">
                 <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active mt-2" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
+                    <div class="tab-pane fade show active mt-3 px-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                        <h1 class="">Dashboard</h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                              <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                              <!-- <li class="breadcrumb-item active" aria-current="page"></li> -->
+                            </ol>
+                        </nav>
+                        <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas>
+                        <!-- <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas>
+                        <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas> -->
                     </div>
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">Two</div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">Three</div>
@@ -58,5 +78,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="js/chart-area-demo.js"></script>
 </body>
 </html>
