--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav class="navbar navbar-dark bg-dark fixed-top" style="height: 9vh;">
         <div class="container-fluid">
             <div class="d-flex">
-                <a class="navbar-brand ps-3 pe-5 me-5" href="#">Bootstrap</a>
-                <button class="navbar-toggler ms-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-controls="collapseWidthExample" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand ps-3 pe-4 me-4" href="#">CliniClass CMS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-controls="collapseWidthExample" aria-expanded="false" aria-label="Toggle navigation" style="margin-left: 19px;">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
+                </button>
             </div>
             <div class="d-flex">
                 <div class="input-group me-4">
@@ -30,24 +30,24 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-      </nav>
-    <div class="container-fluid p-0 d-flex" style="height: 91vh; margin-top: 9vh;">
-        <div class="bg-dark text-light h-100 py-2">
+    </nav>
+    <div class="container-fluid d-flex m-0 p-0">
+        <div class="bg-dark text-light align-self-start sticky-top" style="height: 100vh; padding-top: 9vh;">
             <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                <div class="card card-body mx-3 bg-dark border-0" style="width: 200px;">
+                <div class="card card-body mx-3 bg-dark border-0" style="width: 190px;">
                     <div class="d-flex align-items-start">
                         <div class="nav flex-column nav-pills w-100" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                             <p class="mb-1">CORE</p>
-                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
-                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
+                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Dashboard</button>
                             <p class="mt-3 mb-1">INTERFACE</p>
+                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
                             <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</button>
                             <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</button>
                         </div>
@@ -55,30 +55,148 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid h-100">
-            <div class="d-flex align-items-start">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active mt-3 px-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
-                        <h1 class="">Dashboard</h1>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                              <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                              <!-- <li class="breadcrumb-item active" aria-current="page"></li> -->
-                            </ol>
-                        </nav>
-                        <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas>
-                        <!-- <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas>
-                        <canvas id="myAreaChart" width="1536" height="614" style="display: block; height: 307px; width: 768px;" class="chartjs-render-monitor"></canvas> -->
+        <div class="tab-content flex-fill" id="v-pills-tabContent" style="margin-top: 9vh;">
+            <div class="tab-pane fade show active mt-3 px-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                <h1 class="">Dashboard</h1>
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"></li>
+                    </ol>
+                    <div class="row">
+                        <div class="col-xl-3 col-md-6">
+                            <div class="card bg-primary text-white mb-4">
+                                <div class="card-body"> 3 Visits Today</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div class="card bg-warning text-white mb-4">
+                                <div class="card-body">1 Currently Admitted</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div class="card bg-success text-white mb-4">
+                                <div class="card-body">2 Students Recovered</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6">
+                            <div class="card bg-danger text-white mb-4">
+                                <div class="card-body">0 Emergency</div>
+                                <div class="card-footer d-flex align-items-center justify-content-between">
+                                    <a class="small text-white stretched-link" href="#">View Details</a>
+                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">Two</div>
-                    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">Three</div>
-                    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">Four</div>
-                </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card mb-4">
+                                <div class="card-header">
+                                    <i class="fas fa-chart-area me-1"></i>
+                                    Daily Visits
+                                </div>
+                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card mb-4">
+                                <div class="card-header">
+                                    <i class="fas fa-chart-bar me-1"></i>
+                                    Monthly Visits
+                                </div>
+                                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card mb-4" style="height: 465px;">
+                                <div class="card-header">
+                                    <i class="fas fa-chart-area me-1"></i>
+                                    Recent Diagnosis
+                                </div>
+                                <div class="card-body overflow-auto p-1" id="style-2">
+                                    <div class="col-12">
+                                        <div class="card text-white bg-primary mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="card text-white bg-success mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="card text-white bg-warning mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="card text-white bg-primary mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="card text-white bg-info mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="card text-white bg-danger mb-1">
+                                            <div class="card-header">Header</div>
+                                            <div class="card-body">
+                                              <h4 class="card-title">Primary card title</h4>
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
+            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">Two</div>
+            <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">Three</div>
+            <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">Four</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
     <script src="js/chart-area-demo.js"></script>
+    <script src="js/chart-bar-demo.js"></script>
 </body>
 </html>
