--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="container-fluid d-flex m-0 p-0">
         <div class="bg-dark text-light align-self-start sticky-top" style="height: 100vh; padding-top: 9vh;">
-            <div class="collapse collapse-horizontal" id="collapseWidthExample">
+            <div class="collapse show collapse-horizontal" id="collapseWidthExample">
                 <div class="card card-body mx-3 bg-dark border-0" style="width: 190px;">
                     <div class="d-flex align-items-start">
                         <div class="nav flex-column nav-pills w-100" id="v-pills-tab" role="tablist" aria-orientation="vertical">
