--- a/index.html
+++ b/index.html
@@ -206,8 +206,69 @@
                                 <div class="card-header">
                                     <i class="fas fa-chart-area me-1"></i>
                                     Student Profile
+                                    <a class="text-decoration-none text-dark" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        <i class="fa-regular fa-pen-to-square float-end me-1 mt-1"></i>
+                                    </a>
+                                    <!-- <a class="dropdown-toggle text-decoration-none text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a> -->
                                 </div>
-                                <div class="card-body" style="height: 387px;"></div>
+                                <div class="card-body" style="height: 387px;">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="col-12 mb-3">
+                                                <label for="fname" class="form-label ps-1">Name:</label>
+                                                <input type="text" class="form-control" id="fname" value="Maria Victoria">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="course" class="form-label ps-1">Course/Yr:</label>
+                                                <input type="text" class="form-control" id="course" value="BSIT-4A">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="age" class="form-label ps-1">Age:</label>
+                                                <input type="text" class="form-control" id="age" value="19">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="height" class="form-label ps-1">Height:</label>
+                                                <input type="text" class="form-control" id="height" value="5'6 ft">
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="col-12 mb-3">
+                                                <label for="fname" class="form-label ps-1">Name:</label>
+                                                <input type="text" class="form-control" id="fname" value="Maria Victoria">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="course" class="form-label ps-1">Course/Yr:</label>
+                                                <input type="text" class="form-control" id="course" value="BSIT-4A">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="age" class="form-label ps-1">Age:</label>
+                                                <input type="text" class="form-control" id="age" value="19">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="height" class="form-label ps-1">Height:</label>
+                                                <input type="text" class="form-control" id="height" value="5'6 ft">
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="col-12 mb-3">
+                                                <label for="fname" class="form-label ps-1">Name:</label>
+                                                <input type="text" class="form-control" id="fname" value="Maria Victoria">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="course" class="form-label ps-1">Course/Yr:</label>
+                                                <input type="text" class="form-control" id="course" value="BSIT-4A">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="age" class="form-label ps-1">Age:</label>
+                                                <input type="text" class="form-control" id="age" value="19">
+                                            </div>
+                                            <div class="col-12 mb-3">
+                                                <label for="height" class="form-label ps-1">Height:</label>
+                                                <input type="text" class="form-control" id="height" value="5'6 ft">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -330,6 +391,25 @@
             </div>
             <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">Three</div>
             <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">Four</div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                ...
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
