--- a/index.html
+++ b/index.html
@@ -473,9 +473,11 @@
                                             </button>
                                         </h2>
                                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                            <div class="accordion-body d-flex">
-                                                <img src="image/allerta10mg.jpg" alt="" style="width: 250px;" class="col-auto me-3">
-                                                <div>
+                                            <div class="accordion-body d-flex row">
+                                                <div class="me-3 mb-3 col-12 col-md-auto">
+                                                    <img id="allertaImg" src="image/allerta10mg.jpg" alt="" style="width: 250px;">
+                                                </div>
+                                                <div class="col-12 col-md">
                                                     <p class="">
                                                         Qty: 12pcs 
                                                     </p>
