--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-6 mb-3">
+                    <div class="col-8 col-md-6 mb-3">
                         <div class="input-group me-4">
                             <input type="text" class="form-control" placeholder="Search medicine name" aria-label="Search for..." aria-describedby="button-addon2">
                             <button class="btn btn-primary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
