--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                                    <div class="card-header"><h3 class="text-center pe-5 font-weight-light my-4"><img src="/image/CliniClass-logos_transparent.png" alt="" style="width: 100px; height: 100px;">Login</h3></div>
                                     <div class="card-body">
                                         <form>
                                             <div class="form-floating mb-3">
